finance/web/ms_info/src/deployment/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-info
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-info
  template:
    metadata:
      labels:
        app: ms-info
    spec:
      containers:
      - name: ms-info
        image: ms_info:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
