finance/web/ms_info/src/deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-info-app-service
  namespace: web-app
spec:
  selector:
    app: ms-info
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
