finance/web/ms_info/src/deployment/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ms-info-gateway
  namespace: web-app
spec:
  selector:
    istio: ingressgateway # Usa el selector para el pod del gateway de ingreso
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
