finance/web/ms_info/src/deployment/k8s/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-info
spec:
  host: ms-info
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
