finance/web/ms_info/src/deployment/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-info
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /ms_info
    route:
    - destination:
        host: ms-info
        port:
          number: 5000
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: blackhole
